search bar overflow fix

--- a/sites/all/themes/pul_base/css/layouts/three_nine_stacked/three_nine_stacked.layout.css
+++ b/sites/all/themes/pul_base/css/layouts/three_nine_stacked/three_nine_stacked.layout.css
@@ -34,6 +34,7 @@
     margin-left: 0;
     clear: none;
     margin-left: 0;
+    clear: both;
   }
 
   .three_nine_stacked-region--second {
