--- a/sites/all/themes/pul_base/css/layouts/three_six_three_stacked/three_six_three_stacked.layout.css
+++ b/sites/all/themes/pul_base/css/layouts/three_six_three_stacked/three_six_three_stacked.layout.css
@@ -42,7 +42,6 @@
     margin-right: -100%;
     margin-left: 25.86207%;
     clear: none;
-    margin-left: 0;
   }
 
   .three_six_three_stacked-region--second {
