--- a/sites/all/themes/pul_base/css/pul-base.styles.css
+++ b/sites/all/themes/pul_base/css/pul-base.styles.css
@@ -303,6 +303,7 @@ body {
     margin-left: 1.66667%;
     clear: none;
     margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -860,50 +861,16 @@ footer address, footer #university-copyright-footer {
   clear: both;
 }
 
-.front .block--menu-menu-get-help-menu {
-  margin: 1.5em 0;
-  padding-left: 0;
-  background: #efede8;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  /*
-  h2 {
-  	@include adjust-font-size-to(1em);
-  	@include rhythm(0, 0.2, 0.3, 0, 1em);
-  	font-family: $font-sans;
-  	padding-left: 0.5em;
-  }
-  */
-}
-.front .block--menu-menu-get-help-menu .menu {
+.front .pane-menu-menu-get-help-menu .menu {
   list-style: none;
 }
-.front .block--menu-menu-get-help-menu .menu .leaf {
+.front .pane-menu-menu-get-help-menu .menu .leaf {
   list-style: none;
   margin-bottom: 5px;
   display: block;
 }
-.front .block--menu-menu-get-help-menu .menu .leaf [class^="icon-"], .front .block--menu-menu-get-help-menu .menu .leaf [class*=" icon-"] {
+.front .pane-menu-menu-get-help-menu .menu .leaf [class^="icon-"], .front .pane-menu-menu-get-help-menu .menu .leaf [class*=" icon-"] {
   margin-left: 0;
-}
-.front .block--menu-menu-get-help-menu .menu .leaf a {
-  padding: 6px 12px;
-  margin-bottom: 5px;
-  color: #f5f4f1;
-  text-shadow: 1px 1px 9px #969696;
-}
-.front .block--menu-menu-get-help-menu .menu .leaf a:hover {
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  background: #efede8;
-  color: #477dca;
-  text-shadow: none;
 }
 
 .library-hours tr.even {
@@ -1373,6 +1340,10 @@ footer address, footer #university-copyright-footer {
   padding-top: 1em;
 }
 
+.refine-link a {
+  text-align: right;
+}
+
 .block--quicktabs {
   margin: 1.5em 0;
 }
@@ -1450,11 +1421,19 @@ footer address, footer #university-copyright-footer {
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 3px rgba(232, 117, 17, 0.7);
   outline: none;
 }
+.block--quicktabs .block__content {
+  overflow: auto;
+}
+.block--quicktabs .form-item-query {
+  overflow: auto;
+  display: inline;
+}
 .block--quicktabs input[type="text"] {
   float: left;
   width: 85%;
   height: 45px;
   padding: 5px 0 5px 10px;
+  margin: 0.8em 0;
   display: block;
   border: 1px solid #737373;
   font-family: "Roboto", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -1467,7 +1446,7 @@ footer address, footer #university-copyright-footer {
   height: 45px;
   width: 115px;
   padding: 0;
-  margin-left: -7px;
+  margin: 0.8em 0 0 -7px;
   clear: none;
   float: left;
   border: 1px solid #737373;
@@ -1484,9 +1463,6 @@ footer address, footer #university-copyright-footer {
   -moz-border-radius-bottomleft: 0;
   -webkit-border-bottom-left-radius: 0;
   border-bottom-left-radius: 0;
-}
-.block--quicktabs .homepage-tab-form-message {
-  clear: both;
 }
 
 .l-branding nav ul {
@@ -1857,6 +1833,7 @@ $desk : 1250px;
     margin-left: 0;
     margin-right: 1.66667%;
     margin-left: 0;
+    clear: both;
   }
 
   .nine_three_stacked-region--first {
@@ -1867,6 +1844,7 @@ $desk : 1250px;
     margin-left: 1.66667%;
     margin-right: 1.66667%;
     margin-left: 0;
+    clear: both;
   }
 
   .nine_three_stacked-region--second {
@@ -1887,6 +1865,7 @@ $desk : 1250px;
     margin-left: 0;
     margin-right: 1.66667%;
     margin-left: 0;
+    clear: both;
   }
 }
 /*******************************************************************************
@@ -2107,6 +2086,7 @@ $desk : 1250px;
     margin-left: 1.66667%;
     margin-right: 1.66667%;
     margin-left: 0;
+    clear: both;
   }
 
   .three_nine_stacked-region--second {
@@ -2167,7 +2147,6 @@ $desk : 1250px;
     float: left;
     margin-left: 1.66667%;
     margin-right: 1.66667%;
-    margin-left: 0;
   }
 
   .three_six_three-region--second {
@@ -2227,7 +2206,6 @@ $desk : 1250px;
     float: left;
     margin-left: 1.66667%;
     margin-right: 1.66667%;
-    margin-left: 0;
   }
 
   .three_six_three_stacked-region--second {
