--- a/sites/all/themes/pul_base/sass/base/_grids.scss
+++ b/sites/all/themes/pul_base/sass/base/_grids.scss
@@ -50,6 +50,7 @@ body {
 	@include breakpoint($desk) {
 		@include grid-span(9,1);
 		margin-left: 0;
+		margin-right: 0;
 	}
 }
 
