--- a/sites/all/themes/pul_base/sass/layouts/three_six_three/three_six_three.layout.scss
+++ b/sites/all/themes/pul_base/sass/layouts/three_six_three/three_six_three.layout.scss
@@ -27,7 +27,6 @@
 
   .three_six_three-region--middle {
     @include grid-span(6,4);
-    margin-left: 0;
   }
 
    .three_six_three-region--second {
